--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,7 +1,7 @@
 <div style="margin-bottom:10%">
    <span><img src="assets/stay_safe.jpg" alt="Stay Safe Image" style="margin-left:17%"></span> 
     
-    <span><h2 style="margin-left:38%;margin-right:40%;margin-top:-8%;color:teal">Stay Safe , Stay Home !!!!!!!</h2></span>
+    <span><h2 style="margin-left:38%;margin-right:40%;margin-top:-8%;color:teal">Stay Home , Stay Safe !!!!!!!</h2></span>
 </div>
 
 
@@ -20,7 +20,7 @@
               </p>
               <p>Total Cases :  {{final[0][0].confirmed}}</p>
               <p class="deaths">Total Deaths : {{final[0][0].deaths}}</p>
-              <p>Total Recovered Ceses : {{final[0][0].recovered}} </p>
+              <p>Total Recovered Cases : {{final[0][0].recovered}} </p>
               <p class="date">Data true as of : {{final[0][0].lastupdatedtime}}</p>
           
             </mat-card-content>
@@ -41,7 +41,7 @@
               </p>
               <p>Total Cases :  {{final[0][1].confirmed}}</p>
               <p class="deaths">Total Deaths : {{final[0][1].deaths}}</p>
-              <p>Total Recovered Ceses : {{final[0][1].recovered}} </p>
+              <p>Total Recovered Cases : {{final[0][1].recovered}} </p>
               <p class="date">Data true as of : {{final[0][1].lastupdatedtime}}</p>
           
             </mat-card-content>
@@ -63,7 +63,7 @@
               </p>
               <p>Total Cases :  {{final[0][2].confirmed}}</p>
               <p class="deaths">Total Deaths : {{final[0][2].deaths}}</p>
-              <p>Total Recovered Ceses : {{final[0][2].recovered}} </p>
+              <p>Total Recovered Cases : {{final[0][2].recovered}} </p>
               <p class="date">Data true as of : {{final[0][2].lastupdatedtime}}</p>
           
             </mat-card-content>
@@ -86,7 +86,7 @@
               </p>
               <p>Total Cases :  {{final[0][3].confirmed}}</p>
               <p class="deaths">Total Deaths : {{final[0][3].deaths}}</p>
-              <p>Total Recovered Ceses : {{final[0][3].recovered}} </p>
+              <p>Total Recovered Cases : {{final[0][3].recovered}} </p>
               <p class="date">Data true as of : {{final[0][3].lastupdatedtime}}</p>
           
             </mat-card-content>
@@ -108,7 +108,7 @@
               </p>
               <p>Total Cases :  {{final[0][6].confirmed}}</p>
               <p class="deaths">Total Deaths : {{final[0][6].deaths}}</p>
-              <p>Total Recovered Ceses : {{final[0][6].recovered}} </p>
+              <p>Total Recovered Cases : {{final[0][6].recovered}} </p>
               <p class="date">Data true as of : {{final[0][6].lastupdatedtime}}</p>
           
             </mat-card-content>
@@ -131,7 +131,7 @@
               </p>
               <p>Total Cases :  {{final[0][5].confirmed}}</p>
               <p class="deaths">Total Deaths : {{final[0][5].deaths}}</p>
-              <p>Total Recovered Ceses : {{final[0][5].recovered}} </p>
+              <p>Total Recovered Cases : {{final[0][5].recovered}} </p>
               <p class="date">Data true as of : {{final[0][5].lastupdatedtime}}</p>
           
             </mat-card-content>
@@ -153,7 +153,7 @@
               </p>
               <p>Total Cases :  {{final[0][7].confirmed}}</p>
               <p class="deaths">Total Deaths : {{final[0][7].deaths}}</p>
-              <p>Total Recovered Ceses : {{final[0][7].recovered}} </p>
+              <p>Total Recovered Cases : {{final[0][7].recovered}} </p>
               <p class="date">Data true as of : {{final[0][7].lastupdatedtime}}</p>
           
             </mat-card-content>
@@ -175,7 +175,7 @@
               </p>
               <p>Total Cases :  {{final[0][8].confirmed}}</p>
               <p class="deaths">Total Deaths : {{final[0][8].deaths}}</p>
-              <p>Total Recovered Ceses : {{final[0][8].recovered}} </p>
+              <p>Total Recovered Cases : {{final[0][8].recovered}} </p>
               <p class="date">Data true as of : {{final[0][8].lastupdatedtime}}</p>
           
             </mat-card-content>
@@ -198,7 +198,7 @@
               </p>
               <p>Total Cases :  {{final[0][9].confirmed}}</p>
               <p class="deaths">Total Deaths : {{final[0][9].deaths}}</p>
-              <p>Total Recovered Ceses : {{final[0][9].recovered}} </p>
+              <p>Total Recovered Cases : {{final[0][9].recovered}} </p>
               <p class="date">Data true as of : {{final[0][9].lastupdatedtime}}</p>
           
             </mat-card-content>
