--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,10 +1,34 @@
 <div style="margin-bottom:10%">
+<div>
    <span><img src="assets/stay_safe.jpg" alt="Stay Safe Image" style="margin-left:17%"></span> 
     
     <span><h2 style="margin-left:38%;margin-right:40%;margin-top:-8%;color:teal">Stay Home , Stay Safe !!!!!!!</h2></span>
 </div>
 
 
+<!--auto complete search box-->
+<div style="float:right;margin-right:100px"  class="custom-wrapper-example">
+<form [formGroup]="stateForm">
+  <mat-form-field>
+    <input type="text"
+           matInput
+           placeholder="Search for any state"
+           formControlName="stateGroup"
+           required
+           [matAutocomplete]="autoGroup">
+      <mat-autocomplete #autoGroup="matAutocomplete">
+        <mat-optgroup *ngFor="let group of stateGroupOptions | async" [label]="group.letter">
+          <mat-option *ngFor="let name of group.names" [value]="name">
+            {{name}}
+          </mat-option>
+      </mat-optgroup>
+    </mat-autocomplete>
+  </mat-form-field>
+  <button mat-raised-button color="primary" style="margin-left:20px" (click)="seeDetails(name)">name</button>
+</form>
+</div>
+
+</div>
     <!--card - material-->
 
     <div style="float:left;">
@@ -29,7 +53,7 @@
     
     </div>
 
-    <div style="float:left;margin-left:5px">
+    <div style="float:left;margin-left:5%">
         <mat-card class="example-card">
             <mat-card-header>
               <mat-card-title>Maharashtra</mat-card-title>
@@ -51,7 +75,7 @@
     </div>
 
     
-    <div style="float:left;margin-left:5px">
+    <div style="float:left;margin-left:5%">
         <mat-card class="example-card">
             <mat-card-header>
               <mat-card-title>Delhi</mat-card-title>
@@ -74,10 +98,10 @@
    
 
       
-    <div style="float:left;margin-left:5px">
+    <div style="float:left;margin-left:5%">
         <mat-card class="example-card">
             <mat-card-header>
-              <mat-card-title>Gujrat</mat-card-title>
+              <mat-card-title>Rajasthan</mat-card-title>
             </mat-card-header>
             <img mat-card-image src="assets/gj.jpg" alt="Gujrat">
             <mat-card-content>
@@ -93,10 +117,10 @@
           </mat-card>
           
     
-    </div>
+    </div> 
        
 
-    <div style="float:left;margin-left:5px">
+    <!-- <div style="float:left;margin-left:5px">
         <mat-card class="example-card">
             <mat-card-header>
               <mat-card-title>Uttar Pradesh</mat-card-title>
@@ -115,11 +139,11 @@
           </mat-card>
           
     
-    </div>
+    </div> -->
   
 
 
-    <div style="float:left;margin-top:5%">
+    <!-- <div style="float:left;margin-top:5%">
         <mat-card class="example-card">
             <mat-card-header>
               <mat-card-title>Madhya Pradesh</mat-card-title>
@@ -138,9 +162,9 @@
           </mat-card>
           
     
-    </div>
+    </div> -->
 
-
+<!-- 
     <div style="float:left;margin-top:5%;;margin-left:5px">
         <mat-card class="example-card">
             <mat-card-header>
@@ -160,10 +184,10 @@
           </mat-card>
           
     
-    </div>
+    </div> -->
 
 
-    <div style="float:left;margin-top:5%;;margin-left:5px">
+    <!-- <div style="float:left;margin-top:5%;;margin-left:5px">
         <mat-card class="example-card">
             <mat-card-header>
               <mat-card-title>Andhra Pradesh</mat-card-title>
@@ -182,11 +206,11 @@
           </mat-card>
           
     
-    </div>
+    </div> -->
 
 
     
-    <div style="float:left;margin-top:5%;;margin-left:5px">
+    <!-- <div style="float:left;margin-top:5%;;margin-left:5px">
         <mat-card class="example-card">
             <mat-card-header>
               <mat-card-title>karnataka</mat-card-title>
@@ -205,4 +229,4 @@
           </mat-card>
           
     
-    </div>
+    </div> -->
