--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,67 +1,77 @@
-<div [class.alternative]="otherTheme"> 
-<div style="margin-bottom:10%">
-<!-- <div>
-   <span><img src="assets/stay_safe.jpg" alt="Stay Safe Image" style="margin-left:17%"></span> 
-    
-    <span><h2 style="margin-left:38%;margin-right:40%;margin-top:-8%;color:teal">Stay Home , Stay Safe !!!!!!!</h2></span>
-</div> -->
+<div [class.alternative]="otherTheme">
+  <div style="margin-bottom: 10%">
+    <mat-toolbar class="toolbar" color="primary">
+      <mat-toolbar-row>
+        <span
+          ><img
+            src="assets/stay_safe.jpg"
+            alt="Stay Safe Image"
+            style="margin-left: 17%"
+        /></span>
+        <span style="margin-left: 5%">
+          <h2>Stay Home , Stay Safe !!</h2>
+        </span>
+      </mat-toolbar-row>
+    </mat-toolbar>
+    <mat-slide-toggle
+      class="example-margin"
+      [color]="color"
+      (click)="changeTheme()"
+    >
+      Toggle Theme!
+    </mat-slide-toggle>
 
-<mat-toolbar class="toolbar" color="primary">
-  <mat-toolbar-row>
-  <span><img src="assets/stay_safe.jpg" alt="Stay Safe Image" style="margin-left:17%"></span>
-  <span style="margin-left:5%;">
-    <h2>Stay Home , Stay Safe !!</h2>
-  </span>
-  </mat-toolbar-row>
-  </mat-toolbar> 
-  <mat-slide-toggle 
-      class="example-margin" 
-      [color]="color" 
-     (click)="changeTheme()">
-    Toggle Theme!
-  </mat-slide-toggle>
-
-
-<!--auto complete search box-->
- <div style="float:right;margin-right:100px"  class="custom-wrapper-example">
-<form [formGroup]="stateForm">
-  <mat-form-field>
-    <input type="text"
-           matInput
-           placeholder="Search for any state"
-           formControlName="stateGroup"
-           required
-           [(ngModel)]="stateName"
-           [matAutocomplete]="autoGroup">
-      <mat-autocomplete #autoGroup="matAutocomplete">
-        <mat-optgroup *ngFor="let group of stateGroupOptions | async" [label]="group.letter">
-          <mat-option *ngFor="let name of group.names" [value]="name">
-            {{name}}
-          </mat-option>
-      </mat-optgroup>
-    </mat-autocomplete>
-  </mat-form-field>
-  <button mat-raised-button color="primary" style="margin-left:20px" (click)="seeData(stateName)">See Data</button>
-</form>
-</div>
-
-</div>
-    <!--card - material-->
-
-    <mat-card class="card" *ngFor="let data of final">
-      <mat-card-header>
-        <mat-card-title>{{data.state}}</mat-card-title>
-      </mat-card-header>
-      <img mat-card-img class="img" src={{data.src}} alt="{{data.src}}">
-      <mat-card-content>
-        <p class="active_cases">
-          Active Cases : {{data.active}}
-        </p>
-        <p>Total Cases : {{data.confirmed}}</p>
-        <p class="deaths">Total Deaths : {{data.deaths}}</p>
-        <p>Total Recovered Cases : {{data.recovered}} </p>
-        <p class="date">Data true as of : {{data.lastupdatedtime}}</p>
-      </mat-card-content>
-    </mat-card>
-  
+    <!--auto complete search box-->
+    <div
+      style="float: right; margin-right: 100px"
+      class="custom-wrapper-example"
+    >
+      <form [formGroup]="stateForm">
+        <mat-form-field>
+          <input
+            type="text"
+            matInput
+            placeholder="Search for any state"
+            formControlName="stateGroup"
+            required
+            [(ngModel)]="stateName"
+            [matAutocomplete]="autoGroup"
+          />
+          <mat-autocomplete #autoGroup="matAutocomplete">
+            <mat-optgroup
+              *ngFor="let group of stateGroupOptions | async"
+              [label]="group.letter"
+            >
+              <mat-option *ngFor="let name of group.names" [value]="name">
+                {{ name }}
+              </mat-option>
+            </mat-optgroup>
+          </mat-autocomplete>
+        </mat-form-field>
+        <button
+          mat-raised-button
+          color="primary"
+          style="margin-left: 20px"
+          (click)="seeData(stateName)"
+        >
+          See Data
+        </button>
+      </form>
+    </div>
   </div>
+  <!--card - material-->
+
+  <mat-card class="card" *ngFor="let data of final">
+    <mat-card-header>
+      <mat-card-title>{{ data.state }}</mat-card-title>
+    </mat-card-header>
+    <img mat-card-img class="img" src="{{ data.src }}" alt="{{ data.src }}" />
+    <mat-card-content>
+      <p class="active_cases">Active Cases : {{ data.active }}</p>
+      <p>Total Cases : {{ data.confirmed }}</p>
+      <p class="deaths">Total Deaths : {{ data.deaths }}</p>
+      <p>Total Recovered Cases : {{ data.recovered }}</p>
+      <p class="date">Data true as of : {{ data.lastupdatedtime }}</p>
+    </mat-card-content>
+  </mat-card>
+</div>
