--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,28 +1,28 @@
-.toolbar{
+.toolbar {
   margin: 3% 0;
 }
 /* card - material */
-.mat-card-title{
- color:rgb(42, 165, 124)   
+.mat-card-title {
+  color: rgb(42, 165, 124);
 }
-.deaths{
-    color:red
+.deaths {
+  color: red;
 }
-.active_cases{
-    color:green
+.active_cases {
+  color: green;
 }
-.date{
-    color:blue
+.date {
+  color: blue;
 }
-.card{
+.card {
   display: inline-block;
   height: 450px;
   width: 300px;
-  padding: 8px; 
-  margin: 10px; 
+  padding: 8px;
+  margin: 10px;
   text-align: center;
 }
-.img{
+.img {
   height: 200px;
   display: block;
   margin-left: auto;
@@ -31,5 +31,15 @@
 }
 
 .example-margin {
-  margin: 0 84%;
+  margin: 0 71%;
+}
+
+.staySafeImageStyling {
+  margin-left: 17%;
+  width: 44%;
+}
+@media only screen and (max-width: 500px) {
+  #staySafeImage {
+    display: none;
+  }
 }
