--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -2,11 +2,11 @@
   <div style="margin-bottom: 10%">
     <mat-toolbar class="toolbar" color="primary">
       <mat-toolbar-row>
-        <span
+        <span id="staySafeImage"
           ><img
             src="assets/stay_safe.jpg"
             alt="Stay Safe Image"
-            style="margin-left: 17%"
+            class="staySafeImageStyling"
         /></span>
         <span style="margin-left: 5%">
           <h2>Stay Home , Stay Safe !!</h2>
@@ -18,9 +18,8 @@
       [color]="color"
       (click)="changeTheme()"
     >
-      Toggle Theme!
+      Theme
     </mat-slide-toggle>
-
     <!--auto complete search box-->
     <div
       style="float: right; margin-right: 100px"
